Import of CHRWIN/Acme-PIA-Export-0.017 from CPAN.
gitpan-cpan-distribution: Acme-PIA-Export
gitpan-cpan-version:      0.017
gitpan-cpan-path:         CHRWIN/acme-pia-export/Acme-PIA-Export-0.017.tar.gz
gitpan-cpan-author:       CHRWIN
gitpan-cpan-maturity:     released

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-This is the INSTALL file for package ACME::PIA::Export
+This is the INSTALL file for package Acme::PIA::Export
 
 To install this package, simply unzip the package file and
 change into the created directory. There you should only have
