--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-# This is the README file for ACME::PIA::Export
+# This is the README file for Acme::PIA::Export
 #
 # VERSION: 0.001
 
-For intructions on how to install ACME::PIA::Export, please
+For intructions on how to install Acme::PIA::Export, please
 see the file INSTALL included in this release.
 
 After having installed the package successfully, you can have a look
 at the included documentation by issuing
-perldoc ACME::PIA::Export
+perldoc Acme::PIA::Export
 on the command line.
